--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@google/maps": "^0.4.5",
         "chai": "^4.1.2",
+        "fetch": "^1.1.0",
         "http": "0.0.0",
         "mocha": "^5.0.4",
         "parse5": "^4.0.0",
